Archive2/c8/5cbdee014ed103/output
main.cpp:9:10: error: use of undeclared identifier 'i'
    for (i=0; i<n; i++){
         ^
main.cpp:9:15: error: use of undeclared identifier 'i'
    for (i=0; i<n; i++){
              ^
main.cpp:9:17: error: use of undeclared identifier 'n'
    for (i=0; i<n; i++){
                ^
main.cpp:9:20: error: use of undeclared identifier 'i'
    for (i=0; i<n; i++){
                   ^
main.cpp:10:15: error: use of undeclared identifier 'i'
        guess[i]=0;
              ^
main.cpp:11:16: error: use of undeclared identifier 'i'
        answer[i]=-1;
               ^
6 errors generated.
